--- a/src/layouts/Todo/Todo.module.scss
+++ b/src/layouts/Todo/Todo.module.scss
@@ -1,16 +1,52 @@
 .todo {
   padding-top: 35px;
 
+  &__wrapper {
+    padding: 24px;
+    min-height: 86px;
+    border-radius: 16px;
+    background: #fff;
+    box-shadow: 0px 8px 35px 0px rgba(0, 0, 0, 0.16);
+  }
+
   &__form {
     display: flex;
     justify-content: space-between;
   }
 
   &__top {
-    padding: 24px;
+    padding-bottom: 24px;
+  }
+
+  &__center {
+    padding: 32px 0;
+    border-top: 1px solid #dee2e6;
+    display: flex;
+    flex-direction: column-reverse;
+    max-height: 400px;
+    overflow: scroll;
+  }
+
+  &__item:first-child {
+    margin-top: 0;
+  }
+
+  &__item {
+    margin-top: 25px;
+    display: flex;
+    align-items: center;
+  }
+
+  &__text {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 21px;
+    padding: 0 16px;
     width: 100%;
-    border-radius: 16px;
-    background: #fff;
-    box-shadow: 0px 8px 35px 0px rgba(0, 0, 0, 0.16);
+  }
+
+  &__bottom {
+    display: flex;
+    justify-content: space-between;
   }
 }
