--- a/src/ui/Button/Button.module.scss
+++ b/src/ui/Button/Button.module.scss
@@ -4,11 +4,11 @@
   font-size: 16px;
   font-weight: 600;
   border-radius: 4px;
+  padding: 10px 16px;
 
   &_add {
     background: #272829;
     width: 166px;
-    height: 39px;
   }
 
   &_deleteCompleted {
@@ -17,5 +17,9 @@
 
   &_deleteAll {
     background: #dc3545;
+  }
+
+  &_icon {
+    font-size: 16px;
   }
 }
