--- a/src/layouts/Todo/Todo.module.scss
+++ b/src/layouts/Todo/Todo.module.scss
@@ -2,7 +2,6 @@
   padding-top: 35px;
 
   &__wrapper {
-    padding: 24px;
     min-height: 86px;
     border-radius: 16px;
     background: #fff;
@@ -10,25 +9,22 @@
   }
 
   &__form {
+    padding: 24px;
     display: flex;
     justify-content: space-between;
   }
 
-  &__top {
-    padding-bottom: 24px;
+  &__center {
+    padding: 0 24px 25px;
+    border-top: 1px solid #dee2e6;
+    max-height: 300px;
+    overflow: scroll;
+    scroll-behavior: smooth;
   }
 
-  &__center {
-    padding: 32px 0;
-    border-top: 1px solid #dee2e6;
+  &__list {
     display: flex;
     flex-direction: column-reverse;
-    max-height: 400px;
-    overflow: scroll;
-  }
-
-  &__item:first-child {
-    margin-top: 0;
   }
 
   &__item {
@@ -46,7 +42,9 @@
   }
 
   &__bottom {
+    padding: 24px;
     display: flex;
     justify-content: space-between;
+    background: #f5f5f5;
   }
 }
